--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,12 @@
         </activity>
         <activity
             android:name=".CompleteInformationActivity"
-            android:label="@string/title_activity_complete_information" >
+            android:label="@string/title_activity_complete_information"
+            android:parentActivityName="com.mobilemakers.remindmetv.ShowsListActivity" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mobilemakers.remindmetv.ShowsListActivity" />
         </activity>
     </application>
 
