--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity
             android:name=".ShowsListActivity"
-            android:label="@string/title_activity_shows_list" >
+            android:label="@string/title_activity_shows_list"
+            android:launchMode= "singleTop">
         </activity>
         <activity
             android:name=".CompleteInformationActivity"
