--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".StartScreenActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,13 +24,20 @@
         <activity
             android:name=".ShowsListActivity"
             android:label="@string/title_activity_shows_list"
-            android:launchMode= "singleTop">
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".CompleteInformationActivity"
             android:label="@string/title_activity_complete_information"
-            android:parentActivityName="com.mobilemakers.remindmetv.ShowsListActivity" >
-            <!-- Parent activity meta-data to support 4.0 and lower -->
+            android:parentActivityName=".ShowsListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mobilemakers.remindmetv.ShowsListActivity" />
+        </activity>
+        <activity
+            android:name=".EventsListActivity"
+            android:label="@string/title_activity_events_list"
+            android:parentActivityName=".ShowsListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mobilemakers.remindmetv.ShowsListActivity" />
