--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name=".StartScreenActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,12 +26,14 @@
         <activity
             android:name=".ShowsListActivity"
             android:label="@string/title_activity_shows_list"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".CompleteInformationActivity"
             android:label="@string/title_activity_complete_information"
-            android:parentActivityName=".ShowsListActivity" >
+            android:parentActivityName=".ShowsListActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mobilemakers.remindmetv.ShowsListActivity" />
@@ -38,7 +41,8 @@
         <activity
             android:name=".EventsListActivity"
             android:label="@string/title_activity_events_list"
-            android:parentActivityName=".ShowsListActivity" >
+            android:parentActivityName=".ShowsListActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mobilemakers.remindmetv.ShowsListActivity" />     
